# webscraping-price-monitoring

./: .gitignore  LICENSE  README.md  ppm.json  pyproject.toml
src/webscraping_price_monitoring/: main.py
