[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraping-price-monitoring"
version = "0.1.0"
description = "A new Python project"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
webscraping-price-monitoring = "webscraping_price_monitoring.main:main"
